--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,20 @@
 h1 {
-  color: blue;
+  color: red;
   text-align: center;
 }
 
 h2 {
   font-style: italic;
-  text-align: center;
+  text-align: right;
 }
 
 p {
   font-family: sans-serif;
+  font-size: 20px;
 }
 
 ul {
-  font-size: 20px;
-  line-height: 30px;
+  font-size: 30px;
+  line-height: 40px;
+  font-style: oblique;
 }
